--- a/residentapp/residentapp.service
+++ b/residentapp/residentapp.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Resident app service for RDK platform
-After=wpeframework.service wpeframework-rdkshell.service lighttpd.service
-Requires=wpeframework.service wpeframework-rdkshell.service lighttpd.service
+After=wpeframework.service wpeframework-rdkshell.service lighttpd.service wpeframework-ocicontainer.service
+Requires=wpeframework.service wpeframework-rdkshell.service lighttpd.service wpeframework-ocicontainer.service
 
 [Service]
 Environment="LOGPATH=/opt/logs"
